--- a/source/form.html
+++ b/source/form.html
@@ -10,67 +10,75 @@
 
 <body>
 
-
-  <header class="page-header">
-    <nav class="main-nav main-nav--closed">
-      <div class="logo-wrapper">
-        <a class="page-header__logo">
-            <picture>
+  <div class="content__wrapper">
+    <header class="page-header">
+      <div class="wrapper">
+        <nav class="main-nav main-nav--opened">
+          <div class="logo-wrapper">
+            <a class="page-header__logo">
+              <picture>
                 <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
                 <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
-                <img src="img/logo-pink-white-mobile.svg" width="226" height="30" alt="Логотип Pink»">
+                <img src="img/logo-pink-white-mobile.svg" alt="Логотип Pink»">
               </picture>
-        </a>
+            </a>
+          </div>
+          <button class="main-nav__toggle" type="button"></button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item">
+                <a href="photo.html">Фотографии</a>
+              </li>
+              <li class="site-list__item">
+                <a>Конкурс</a>
+              </li>
+              <li class="site-list__item">
+                <a href="#">HTML Academy</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-      <button class="main-nav__toggle" type="button"></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a>Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    </header>
     <div class="page-header__photo photo">
       <div class="photo__wrapper-image">
         <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
     </div>
-
-  </header>
+  </div>
   <main class="page-main">
     <section class="page-main__form">
       <h2 class="visually-hidden">Форма истории</h2>
     </section>
   </main>
   <footer class="page-footer">
-      <div class="page-footer__wrapper">
-          <div class="page-footer__logo">
-            <a class="page-footer__logo-image "></a>
-          </div>
-          <div class="page-footer__social-links social-links">
-            <a class="social-links__item social-links__item--tw" href="https://twitter.com/"></a>
-            <a class="social-links__item social-links__item--fb" href="https://www.facebook.com/"></a>
-            <a class="social-links__item social-links__item--video" href="https://www.youtube.com/"></a>
-          </div>
-          <div class="page-footer__develop">
-            <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
-              <svg class="page-footer__develop-link-icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 60 60">
-                <path fill="#2E368F"
-                  d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
-              </svg>
-              Разработано</a>
-          </div>
+    <div class="page-footer__wrapper">
+      <div class="page-footer__logo">
+        <a class="page-footer__logo-image ">
+          <picture>
+            <source media="(min-width: 960px)" srcset="img/logo-pink-blue-desktop.svg">
+            <source media="(min-width: 660px)" srcset="img/logotype-blue-tablet.svg">
+            <img src="img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
+          </picture>
+        </a>
+      </div>
+      <div class="page-footer__social-links social-links">
+        <a class="social-links__item social-links__item--tw" href="https://twitter.com/"></a>
+        <a class="social-links__item social-links__item--fb" href="https://www.facebook.com/"></a>
+        <a class="social-links__item social-links__item--video" href="https://www.youtube.com/"></a>
+      </div>
+      <div class="page-footer__develop">
+        <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
+          <svg class="page-footer__develop-link-icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 60 60">
+            <path fill="#2E368F"
+              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+          </svg>
+          Разработано</a>
+      </div>
   </footer>
 </body>
 
