--- a/source/photo.html
+++ b/source/photo.html
@@ -207,11 +207,11 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-          <picture>
-              <source media="(min-width: 960px)" srcset="./img/logo-pink-blue-desktop.svg">
-              <source media="(min-width: 660px)" srcset="./img/logotype-blue-tablet.svg">
-              <img src="./img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
-            </picture>
+        <picture>
+          <source media="(min-width: 960px)" srcset="./img/logo-pink-blue-desktop.svg">
+          <source media="(min-width: 660px)" srcset="./img/logotype-blue-tablet.svg">
+          <img src="./img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
+        </picture>
       </div>
       <div class="page-footer__social-links social-links">
         <a class="social-links__item social-links__item--tw" href="https://twitter.com/"></a>
@@ -219,13 +219,28 @@
         <a class="social-links__item social-links__item--video" href="https://www.youtube.com/"></a>
       </div>
       <div class="page-footer__develop">
-        <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
-          <svg class="page-footer__develop-link-icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 60 60">
-            <path fill="#d22856"
-              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
-          </svg>
-          Разработано</a>
+        <a class="page-footer__develop-link" href="https://htmlacademy.ru/">Разработано
+          <svg class="page-footer__develop-link-icon"
+          xmlns:dc="http://purl.org/dc/elements/1.1/"
+          xmlns:cc="http://creativecommons.org/ns#"
+          xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+          xmlns:svg="http://www.w3.org/2000/svg"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+          xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+          viewBox="0 0 50 60"
+          version="1.1"
+          id="svg4"
+          sodipodi:docname="htmlacademy.svg"
+          width="30"
+          height="30">
+         <path
+            d="M 25.253807,0.7898051 H 25.000001 L 0,3.2457634 V 45.581805 L 25.000001,59.265 50,45.581805 V 3.2457634 Z M 46.827412,43.827548 25.000001,55.756489 3.1725892,43.827548 V 26.518891 l 21.7005098,11.92894 v 2.105104 L 10.025381,32.366411 v 2.105106 l 14.97462,8.303477 v 2.222058 l -14.97462,-8.186526 v 2.105106 l 14.97462,8.18653 15.101523,-8.303482 v -8.888227 l 6.725888,-3.742415 z m -0.126905,-19.881566 -5.964466,3.27461 -2.791877,1.520357 -13.071065,-7.133974 v 2.105108 l 11.167512,6.19837 h -0.126905 l -0.253807,0.11695 -1.649746,0.818652 -9.26396,-5.028867 v 2.105109 l 7.360406,3.97631 -1.776648,1.052554 -5.456852,-3.040708 v 2.105105 L 28.5533,34.003716 24.873099,35.991872 3.2994924,24.179882 24.873099,12.250943 Z M 46.827412,21.840876 24.873099,9.911936 3.1725892,21.840876 V 5.9356221 L 25.000001,3.8305154 46.827412,5.9356221 Z"
+            id="path2"
+            style="fill:#2e368f;stroke-width:1.21825361" />
+       </svg></a>
+
+
       </div>
   </footer>
 </body>
